packages/cashc/test/syntax/success/correct_pragma.cash
pragma cashscript ^0.5.0;

contract Test() {
    function hello(sig s, pubkey pk) {
        require(checkSig(s, pk));
    }

    function world(int a) {
        require(a + 5 == 10);
    }
}
