packages/cashc/test/syntax/fail/unterminated_array.cash
contract Test() {
    function cms(sig s, pubkey pk) {
        require(checkMultiSig([s, sig(0x00)], [pk, pubkey(0x00)));
    }
}
